# Ros_ws

./: README.md  arm_base.dae  arm_segment.dae  camera.dae
Machines/: README.md
Machines/test 3/: test3.urdf
Machines/test1/: base.part  base.stl  config.json  kamera.part  kamera.stl  robot.urdf
Machines/test2/: config.json  led_base.part  led_base.stl  robot.sdf
Machines/test3/: materials.xacro  test3.urdf
Machines/test3/install/: local_setup.sh  setup.sh
Machines/test3/log/: latest_build
Machines/test3/src/attemptOfPackgage1/: package.xml  setup.cfg  setup.py
Machines/test3/src/urdf/: CMakeLists.txt  package.xml
Machines/test3/src/urdf/urdf/: test3.urdf.xacro
Machines/test3/stl/: Part Studio - båt.stl  centered parts - base.stl  centered parts - kamera.stl  centered parts - led base.stl
Machines/test4/install/: local_setup.sh  setup.sh
Machines/test4/log/: latest_build
Machines/test4/src/semesteroppgaven/: CMakeLists.txt  package.xml
Notater/: README.md
Notater/Gazebo/: setup.md  usage.md
dev_ws/install/: local_setup.sh  setup.sh
dev_ws/install/semesteroppgave/launch/: listener.launch.py  talker.launch.py
dev_ws/install/semesteroppgave/share/semesteroppgave/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
dev_ws/log/: latest_build
dev_ws/src/semesteroppgave/: CMakeLists.txt  package.xml
dev_ws/src/semesteroppgave/launch/: listener.launch.py  talker.launch.py
gazebo_notes/: README.md
ros2_notes/: README.md
ros2_notes/gazebo/: README.md
ros_notes/: README.md
(+5 files in other folders)
