<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semesteroppgave</name>
  <version>0.0.0</version>
  <description>the package</description>
  <maintainer email="583411@stud.hvl.no">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>demo_nodes.cpp</exec_depend>
  <exec_depend>demo_nodes.py</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
